Fixing code errors

--- a/Galen-Evals/2.3_RAG_eval.ipynb
+++ b/Galen-Evals/2.3_RAG_eval.ipynb
@@ -166,13 +166,12 @@
     "results_df = pd.DataFrame(columns=['Model', 'Question', 'Rewritten Question', 'Response', 'Latency'])\n",
     "\n",
     "models = {\n",
-    "    # \"qwen-14b\": \"nomagick/qwen-14b-chat:f9e1ed25e2073f72ff9a3f46545d909b1078e674da543e791dec79218072ae70\",\n",
-    "    # \"falcon-40b\": \"joehoover/falcon-40b-instruct:7d58d6bddc53c23fa451c403b2b5373b1e0fa094e4e0d1b98c3d02931aa07173\",\n",
-    "    \"yi-34b\": \"01-ai/yi-34b-chat:914692bbe8a8e2b91a4e44203e70d170c9c5ccc1359b283c84b0ec8d47819a46\",\n",
-    "    \"mistral-7b\": \"mistralai/mistral-7b-instruct-v0.2:f5701ad84de5715051cb99d550539719f8a7fbcf65e0e62a3d1eb3f94720764e\",\n",
-    "    # \"llama2-70b\": \"meta/llama-2-70b-chat\",\n",
-    "    \"noushermes2\": \"nateraw/nous-hermes-2-solar-10.7b:1e918ab6ffd5872c21fba21a511f344fd12ac0edff6302c9cd260395c7707ff4\",\n",
-    "    \"mixtral-instruct\": \"mistralai/mixtral-8x7b-instruct-v0.1:2b56576fcfbe32fa0526897d8385dd3fb3d36ba6fd0dbe033c72886b81ade93e\",\n",
+    "    \"qwen\": \"lucataco/qwen1.5-110b:af7953cb4fe4948df44a074d4785c2f74d0096257197198e90c9ac84361b6aa9\",\n",
+    "    \"llama3\": \"meta/meta-llama-3-70b-instruct\",\n",
+    "    \"yi\": \"01-ai/yi-34b-chat:914692bbe8a8e2b91a4e44203e70d170c9c5ccc1359b283c84b0ec8d47819a46\",\n",
+    "    # \"mistral-7b\": \"mistralai/mistral-7b-instruct-v0.2:f5701ad84de5715051cb99d550539719f8a7fbcf65e0e62a3d1eb3f94720764e\",\n",
+    "    \"noushermes\": \"nousresearch/hermes-2-theta-llama-8b\",\n",
+    "    \"mixtral\": \"mistralai/mixtral-8x7b-instruct-v0.1\",\n",
     "    # \"deepseek_33bq\": \"kcaverly/deepseek-coder-33b-instruct-gguf:ea964345066a8868e43aca432f314822660b72e29cab6b4b904b779014fe58fd\",\n",
     "    }\n",
     "\n",
